package Lab5.Model;

/**
 * Перечисление типов организаций.
 * Содержит три возможных типа:
 * - COMMERCIAL
 * - PUBLIC
 * - PRIVATE_LIMITED_COMPANY
 */
public enum OrganizationType {
    COMMERCIAL,
    PUBLIC,
    PRIVATE_LIMITED_COMPANY
}
